--- a/template.yaml
+++ b/template.yaml
@@ -30,7 +30,7 @@ Resources:
 
 
   ############################################################################  ->  Lambda Functions
-  GetCapitalSession:
+  StartCapitalSession:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: functions/capital/start-session/
