give StartCapitalSession function a name

--- a/template.yaml
+++ b/template.yaml
@@ -33,6 +33,7 @@ Resources:
   StartCapitalSession:
     Type: AWS::Serverless::Function
     Properties:
+      FunctionName: StartCapitalSessionFn
       CodeUri: functions/capital/start-session/
       Handler: startSession.handler
       Policies: 
