--- a/layers/aws-services/package.json
+++ b/layers/aws-services/package.json
@@ -2,7 +2,7 @@
   "name": "aws-services",
   "version": "1.0.0",
   "description": "Implementation of the AWS services used by Cloud-Trader app",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "mocha --recursive './**/*.test.mjs'"
   },
