--- a/template.yaml
+++ b/template.yaml
@@ -22,9 +22,13 @@ Globals:
     Layers:
       - !Ref AWSServicesLayer
       - !Ref CommonLayer
-    # Environment:
-    #   Variables:
-    #     TODO: TODO
+    Environment:
+      Variables:
+        CT_IDENTIFIER: /cloud-trader/identifier         # TODO: Each user would persist as account settings in DB
+        CT_KEY: /cloud-trader/key                       # TODO: Each user would persist as account settings in DB
+        CT_PASSWORD: /cloud-trader/password             # TODO: Each user would persist as account settings in DB
+        CT_DEMO_URL: /cloud-trader/capitalDemoUrl       # TODO: Each user would persist as account settings in DB
+        SESSION_ENDPOINT: /session
 
 Resources:
   ############################################################################  ->  State Machines
