add dynamodb dependency

--- a/layers/aws-services/package.json
+++ b/layers/aws-services/package.json
@@ -8,6 +8,8 @@
   "author": "Burabari Kpai",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-ssm": "^3.430.0"
+    "@aws-sdk/client-dynamodb": "^3.433.0",
+    "@aws-sdk/client-ssm": "^3.430.0",
+    "@aws-sdk/lib-dynamodb": "^3.433.0"
   }
 }
