--- a/functions/db/get-session/package.json
+++ b/functions/db/get-session/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "check-session",
+  "name": "get-session",
   "version": "1.0.0",
   "description": "Gets the capital.com session object in database",
   "main": "getDbSession.mjs",
