--- a/template.yaml
+++ b/template.yaml
@@ -28,7 +28,9 @@ Globals:
         CT_PASSWORD: /cloud-trader/password             # TODO: Each user would persist as account settings in DB
         CT_DEMO_URL: /cloud-trader/capitalDemoUrl       # TODO: Each user would persist as account settings in DB
         SESSION_ENDPOINT: /session
+        MARKET_CATEGORIES_ENDPOINT: /marketnavigation
         SESSION_TABLE_NAME: Session
+        MARKET_CATEGORIES_TABLE_NAME: MarketCategories
         SESSION_TABLE_KEY_VALUE: only1session
 
 Resources:
@@ -149,4 +151,12 @@ Resources:
       TableName: Session    # MUST be thesame as SESSEION_TABLE_NAME enviromnent variable above!!!
       PrimaryKey:           # { sessionID: 'only1session' }
         Name: sessionID
+        Type: String
+  
+  MarketCategoriesTable:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      TableName: MarketCategories    # MUST be thesame as MARKET_CATEGORIES_TABLE_NAME enviromnent variable above!!!
+      PrimaryKey:           # { sessionID: 'only1session' }
+        Name: id
         Type: String
