--- a/state-machines/get-market-categories.asl.yaml
+++ b/state-machines/get-market-categories.asl.yaml
@@ -16,7 +16,7 @@ States:
     Choices:
       - Variable: $.isValid
         BooleanEquals: true
-        Next: Result-State
+        Next: Get-Market-Categories
       - Variable: $.isValid
         BooleanEquals: false
         Next: Start-Session
