add definitions for historicPrices feature

--- a/template.yaml
+++ b/template.yaml
@@ -28,6 +28,7 @@ Globals:
         CT_PASSWORD: /cloud-trader/password # TODO: Each user would persist as account settings in DB
         CT_DEMO_URL: /cloud-trader/capitalDemoUrl # TODO: Each user would persist as account settings in DB
         SESSION_ENDPOINT: /session
+        PRICES_ENDPOINT: /prices
         MARKETS_ENDPOINT: /markets
         MARKET_CATEGORIES_ENDPOINT: /marketnavigation
         SESSION_TABLE_NAME: Session
@@ -188,6 +189,37 @@ Resources:
         - LambdaInvokePolicy:
             FunctionName: !Ref SingleMarketDetails
 
+  HistoricPricesSM:
+    Type: AWS::Serverless::StateMachine
+    Properties:
+      Name:   HistoricPricesSM
+      DefinitionUri: state-machines/historic-prices.asl.yaml
+      Type: STANDARD
+      DefinitionSubstitutions:
+        StartCapitalSessionArn: !GetAtt StartCapitalSession.Arn
+        GetDbSessionArn: !GetAtt GetDbSession.Arn
+        ValidateSessionArn: !GetAtt ValidateSession.Arn
+        SaveSessionArn: !GetAtt SaveSession.Arn
+        HistoricPricesArn: !GetAtt HistoricPrices.Arn
+      Events:
+        GatewayTrigger:
+          Type: Api
+          Properties:
+            Path: /prices
+            Method: GET
+            RestApiId: !Ref CloudTraderGateway
+      Policies:
+        - LambdaInvokePolicy:
+            FunctionName: !Ref StartCapitalSession
+        - LambdaInvokePolicy:
+            FunctionName: !Ref GetDbSession
+        - LambdaInvokePolicy:
+            FunctionName: !Ref ValidateSession
+        - LambdaInvokePolicy:
+            FunctionName: !Ref SaveSession
+        - LambdaInvokePolicy:
+            FunctionName: !Ref HistoricPrices
+
   ############################################################################  ->  API Gateways
   CloudTraderGateway:
     Type: AWS::Serverless::Api
@@ -273,6 +305,15 @@ Resources:
       FunctionName: SingleMarketDetails
       CodeUri: functions/capital/markets/
       Handler: singleMarketDetail.handler
+      Policies:
+        - !Ref ReadParameterStoreValues
+
+  HistoricPrices:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: HistoricPrices
+      CodeUri: functions/capital/markets/
+      Handler: historicPrices.handler
       Policies:
         - !Ref ReadParameterStoreValues
 
